refactor artifacts